--- a/com.aware.plugin.esm.flexible.lib/build.gradle
+++ b/com.aware.plugin.esm.flexible.lib/build.gradle
@@ -34,12 +34,26 @@ android {
             manifest.srcFile '../com.aware.plugin.esm.flexible/src/main/AndroidManifest.xml'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 }
 
 repositories {
     maven { url 'https://jitpack.io' } //this allows library generation directly from GitHub source-code
 }
 
-dependencies {
-    api "com.github.denzilferreira:aware-client:$aware_libs"
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
+
+apply from: '../dependencies.gradle'
