--- a/com.aware.plugin.esm.flexible/build.gradle
+++ b/com.aware.plugin.esm.flexible/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion build_tools
 
     defaultConfig {
-        applicationId "com.aware.plugin.esm" //EDIT ME
+        applicationId "com.aware.plugin.esm.flexible" //EDIT ME
         minSdkVersion minimum_sdk
         targetSdkVersion target_sdk
         versionCode version_code
@@ -27,12 +27,26 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 }
 
 repositories {
     maven { url 'https://jitpack.io' } //this allows library generation directly from GitHub source-code
 }
 
-dependencies {
-    api "com.github.denzilferreira:aware-client:$aware_libs"
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
+
+apply from: '../dependencies.gradle'
